# late-stage-repair-unified

./: .gitignore  GLOSSARY.md  README.md  README.zh-CN.md  REPORT_PROJECT_SUMMARY_EN.md  REPORT_PROJECT_SUMMARY_KO.md  pyproject.toml
.github/workflows/: verify.yml
code/scripts/: cass_bd_collect_partial_replay.py  cass_r4_collect.py  last_pack_collect_format.py  unify_live_full_r2_integrity.py  unify_live_full_r2_make_reports.py  unify_live_full_r2_prepare.py  unify_live_full_r2_watch_qwen14.py  unify_live_full_run_family.sh
configs/: datasets.yaml  methods.yaml  models.yaml
logs/: README.md  decision_log.md  research_log.md
manifests/source_manifests/: gsm8k_train_cluster_main_r3_full1515.json  gsm8k_train_generic_main_r3_full.json  ifbench_main_300.json  ifeval_screened_le150_381.json
manifests/unify_live_full_r2_shared/: gsm8k_train_cluster_live_full.json  gsm8k_train_generic_live_full.json  ifbench_live_full.json  ifeval_screened_live_full.json  split_seeds.json  surface_manifest.json
manifests/unify_live_full_r2_shared_qwen14_8way/: feature_map.json  gsm8k_train_cluster_live_full.json  gsm8k_train_generic_live_full.json  ifbench_live_full.json  ifeval_screened_live_full.json  surface_manifest.json
prompts/adversary/: alternatives_v1.txt  alternatives_v2.txt  freeform_counter_v1.txt  persona_slot_v1.txt  repair_v1.txt
prompts/atlas/: critical_field_repair_v1.txt  field_quantities_v1.txt  field_semantics_v1.txt  retrieval_schema_v1.txt  teacher_schema_v1.txt
tests/: test_unify_live_full_r2_core.py  test_unify_live_full_r2_reporting.py
(+275 files in other folders)
