[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-research"
version = "0.1.0"
description = "Inference-time research prototype for DART"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.1.0",
  "json-repair>=0.35.0",
  "jsonschema>=4.23.0",
  "matplotlib>=3.9.0",
  "openai>=1.58.1",
  "orjson>=3.10.0",
  "pandas>=2.2.3",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "seaborn>=0.13.2",
  "tenacity>=9.0.0",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]
local = [
  "accelerate>=1.13.0",
  "bitsandbytes>=0.49.0",
  "transformers>=4.55.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
